add endpoint update daily log
